re PR c++/66919 (C++14 ICE during error reporting)

PR c++/66919
	* pt.c (tsubst_copy): Pass complain to mark_used, check return value.

From-SVN: r226955